[fix] - z-index fix on homepage

--- a/css/header.css
+++ b/css/header.css
@@ -70,7 +70,7 @@ nav {
   }
   
   .burger {
-    right: 35px;
+    right: 25px;
     display: block;
     cursor: pointer;
     position: absolute;
